# pidgin

./: .codespellrc  .gitignore  .gitmodules  .housekeeping.toml  CHANGELOG.md  Cargo.toml  README.md  STEWARD.md  UPSTREAM_COMMIT  conformance.json  design.md
bindings/php/: .gitignore  Cargo.toml  README.md  build.rs  regen.sh  test.php  test.sh
bindings/php/demo/: README.md  index.php  serve.sh
bindings/php/schema/: api.json  catalog.json
bindings/php/src/: core_impl.rs  generated.rs  lib.rs  session.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_faux.py
bindings/python/demo/: app.py  requirements.txt
bindings/python/src/: lib.rs
crates/atilla-agent/: Cargo.toml
crates/atilla-agent/src/: agent.rs  agent_loop.rs  harness.rs  lib.rs  node.rs  proxy.rs  types.rs
crates/atilla-agent/tests/: agent_pi_golden_roundtrip.rs  compaction.rs  compaction_models_bridge.rs  e2e.rs  golden_vectors.rs  pi_golden_roundtrip.rs  prop_session_roundtrip.rs  repo.rs  session.rs  session_uuid.rs  storage.rs
crates/atilla-ai/: Cargo.toml
crates/atilla-ai/src/: api.rs  auth.rs  compat.rs  cost.rs  lib.rs  providers.rs  types.rs  utils.rs
crates/atilla-ai/tests/: roundtrip.rs
crates/atilla-cli/: Cargo.toml
crates/atilla-cli/src/: main.rs
crates/atilla-cli/tests/: black_box_cli.rs  rpc_protocol.rs
crates/atilla-coding/: Cargo.toml
crates/atilla-coding/examples/: interactive_faux.rs
crates/atilla-coding/src/: core.rs  extensions.rs  lib.rs  modes.rs  utils.rs
crates/atilla-coding/tests/: compaction.rs  interactive_message_vectors.rs  interactive_shell.rs  package_manager_resolve.rs  pi_golden_roundtrip.rs  resource_loader_orchestrator.rs
crates/atilla-core/: Cargo.toml
crates/atilla-core/src/: lib.rs
crates/atilla-extensions/: Cargo.toml
crates/atilla-extensions/src/: api_ops.rs  context.rs  dispatch.rs  host.rs  inventory.rs  lib.rs  loader.rs  oauth_login_impl.rs  resource_loader_impl.rs  runtime.rs
crates/atilla-extensions/tests/: deno_dispatch.rs  deno_extensions.rs  deno_oauth_phase_a.rs  deno_resource_loader.rs  deno_runner_impl.rs
crates/atilla-napi/: .gitignore  Cargo.toml  oauth-flow-driver.js  package.json
crates/atilla-napi/__tests__/: agent-bridge-loop.mjs  agent-bridge-primitive.mjs  agent-bridge-tools.mjs
crates/atilla-napi/src/: agent.rs  agent_bridge.rs  autocomplete.rs  command_core.rs  faux.rs  lib.rs  oauth.rs  tools.rs  tui.rs
crates/atilla-orchestrator/: Cargo.toml
crates/atilla-orchestrator/src/: cli.rs  config.rs  credential_store.rs  handler.rs  lib.rs  main.rs  radius.rs  rpc_process.rs  serve.rs  storage.rs
crates/atilla-tui/: Cargo.toml
crates/atilla-tui/examples/: echo_shell.rs
crates/atilla-tui/src/: app.rs  eaw_table.rs  keys.rs  lib.rs  overlay.rs  renderer.rs  terminal.rs  text_util.rs  undo_stack.rs  unicode_tables.rs  width.rs  word_navigation.rs
crates/atilla-tui/tests/: autocomplete_vectors.rs  components_vectors.rs  editor_vectors.rs  input_list_vectors.rs  keys_vectors.rs  markdown_panic_repros.rs  markdown_vectors.rs  prop_markdown.rs  prop_width.rs  renderer_overlay_vectors.rs  renderer_vectors.rs  run_loop.rs  terminal_input.rs  widget_vectors.rs  width_vectors.rs
crates/pidgin-agent/: Cargo.toml
crates/pidgin-agent/src/: agent.rs  agent_loop.rs  lib.rs  node.rs  proxy.rs  types.rs
crates/pidgin-agent/tests/: agent_pi_golden_roundtrip.rs  compaction.rs  compaction_models_bridge.rs  e2e.rs  golden_vectors.rs  prop_session_roundtrip.rs  repo.rs  session.rs  session_uuid.rs  storage.rs
crates/pidgin-ai/: Cargo.toml
crates/pidgin-ai/data/: image-models.json
crates/pidgin-ai/src/: compat.rs  env_api_keys.rs  image_models.rs  image_models_generated.rs  images.rs  images_api_registry.rs  images_models.rs  lib.rs  models_store.rs  session_resources.rs  types.rs
crates/pidgin-ai/tests/: roundtrip.rs
crates/pidgin-cli/: Cargo.toml
crates/pidgin-cli/src/: main.rs
crates/pidgin-cli/tests/: black_box_cli.rs  deno_cli_extensions.rs  rpc_protocol.rs
crates/pidgin-coding/: Cargo.toml
crates/pidgin-coding/examples/: interactive_faux.rs
crates/pidgin-coding/src/: bun.rs  cli.rs  core.rs  lib.rs  migrations.rs  modes.rs  utils.rs
crates/pidgin-coding/tests/: compaction.rs  interactive_footer_vectors.rs  interactive_message_vectors.rs  interactive_shell.rs  llama_mount_seam.rs  llama_ui_behavior.rs  llama_ui_vectors.rs  package_manager_resolve.rs  pi_golden_roundtrip.rs  resource_loader_orchestrator.rs
crates/pidgin-core/: Cargo.toml
crates/pidgin-core/src/: lib.rs
crates/pidgin-extensions/: Cargo.toml
crates/pidgin-extensions/src/: api_ops.rs  combined.rs  context.rs  dispatch.rs  host.rs  inventory.rs  lib.rs  loader.rs  module_loader.rs  oauth_login_impl.rs  resource_loader_impl.rs  runtime.rs
crates/pidgin-extensions/tests/: behavior_hooks.rs  combined_loader.rs  deno_bash_tool.rs  deno_dispatch.rs  deno_example_extension.rs  deno_extensions.rs  deno_notify_sink.rs  deno_oauth_phase_a.rs  deno_pi_runtime_shim.rs  deno_pi_tui_shim.rs  deno_pirate_extension.rs  deno_resource_loader.rs  deno_runner_impl.rs  deno_typebox_module_loader.rs  python_engine.rs  python_tool_block_enforcement.rs  task_list_example.rs
crates/pidgin-model-catalog/: Cargo.toml  README.md
crates/pidgin-model-catalog/data/: manifest.json  models.json  providers.json
crates/pidgin-model-catalog/src/: catalog.rs  lib.rs  types.rs
crates/pidgin-model-catalog/tests/: catalog.rs
crates/pidgin-napi/: .gitignore  Cargo.toml  oauth-flow-driver.js  package.json  regen.sh
crates/pidgin-napi/__tests__/: _harness.mjs  agent-bridge-hooks.mjs  agent-bridge-loop.mjs  agent-bridge-primitive.mjs  agent-bridge-tools.mjs  bridge-async-oneshot.mjs  session-call-seam.mjs
crates/pidgin-napi/schema/: api.json
crates/pidgin-orchestrator/: Cargo.toml
throwaway/deno-hello/: Cargo.toml  README.md
throwaway/node-hello/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.js  vitest.config.ts
throwaway/php-hello/: Cargo.toml  README.md  test.php
(+957 files in other folders)
