[workspace]
resolver = "2"
members = [
    "crates/atilla-core",
    "crates/atilla-cli",
    "crates/atilla-ai",
    "crates/atilla-agent",
    "crates/atilla-coding",
    "crates/atilla-model-catalog",
    "crates/atilla-napi",
    "crates/atilla-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zmaril/atilla"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
