[workspace]
resolver = "2"
members = [
    "crates/atilla-core",
    "crates/atilla-cli",
    "crates/atilla-ai",
    "crates/atilla-agent",
    "crates/atilla-coding",
    "crates/atilla-model-catalog",
    "crates/atilla-napi",
    "crates/atilla-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zmaril/atilla"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# float_roundtrip: serde_json's default float parser can be off by 1 ULP; this
# feature selects the correctly-rounded parser so decimals round-trip to the
# exact same f64 pi (and JS) produce — required for bit-exact cost conformance.
serde_json = { version = "1", features = ["float_roundtrip"] }
