[workspace]
resolver = "2"
members = [
    "crates/pidgin-core",
    "crates/pidgin-cli",
    "crates/pidgin-ai",
    "crates/pidgin-agent",
    "crates/pidgin-coding",
    "crates/pidgin-extensions",
    "crates/pidgin-model-catalog",
    "crates/pidgin-orchestrator",
    "crates/pidgin-napi",
    "crates/pidgin-tui",
    "crates/pidgin-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zmaril/atilla"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# float_roundtrip: serde_json's default float parser can be off by 1 ULP; this
# feature selects the correctly-rounded parser so decimals round-trip to the
# exact same f64 pi (and JS) produce — required for bit-exact cost conformance.
serde_json = { version = "1", features = ["float_roundtrip"] }
