[package]
name = "pidgin-php"
description = "PHP native extension (ext-php-rs cdylib) bridging the pidgin engine into PHP."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zmaril/atilla"
publish = false

[lib]
name = "pidgin_php"
crate-type = ["cdylib"]

[dependencies]
# Pinned exactly: ext-php-rs is pre-1.0 and its attribute macros churn between
# minors (see throwaway/php-hello findings). 0.13.1 is proven on PHP 8.4 NTS.
ext-php-rs = "=0.13.1"
# The façade crate is the only pidgin dependency a binding is allowed to reach.
pidgin-core = { path = "../../crates/pidgin-core" }
# The generated binding routes fallible ops through `anyhow::Result`.
anyhow = "1"
# The shared streaming contract (Poll/PollStream) the generated binding imports.
# Pinned to fluessig `main` (node backend + per-op name pins); shared whole-repo
# pin with crates/pidgin-napi. See regen.sh / README.md.
fluessig-runtime = { git = "https://github.com/zmaril/fluessig", rev = "48340b16cac5a7c6658748ac5403352425811aeb" }
# Used by the hand-authored `Pidgin\Session` surface to extract assistant text
# from the harness's `serde_json::Value` turn result.
serde_json = "1"

[features]
# Opt into live HTTP (real Anthropic turns) through the façade. NOT default: the
# faux build stays reqwest-free.
native-http = ["pidgin-core/native-http"]

# Standalone workspace: this empty table makes cargo treat this crate as its own
# workspace rather than attaching it to the workspace rooted at the repository
# top level. That keeps ext-php-rs (which needs libclang + PHP dev headers via
# bindgen) out of the root `cargo build` and the shared `rust` CI job, so those
# stay green on runners without PHP headers installed. Build this crate with
# `cargo build` from inside bindings/php (see README.md).
[workspace]
