[package]
name = "atilla-ai"
description = "Rust mirror of @earendil-works/pi-ai — provider and model surface (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
getrandom = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11.0"

[dev-dependencies]
serde_json = { workspace = true }
