[package]
name = "atilla-ai"
description = "Rust mirror of @earendil-works/pi-ai — provider and model surface (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
