[package]
name = "atilla-ai"
description = "Rust mirror of @earendil-works/pi-ai — provider and model surface (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Context-overflow detection (utils/overflow.rs) compiles pi's provider error
# patterns as case-insensitive regexes.
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
# WHATWG-compatible URL parsing/normalization for utils/node_http_proxy.rs, so
# target parsing and the proxy URL's string form match pi's `URL` byte-for-byte.
url = "2"
atilla-model-catalog = { path = "../atilla-model-catalog" }

[dev-dependencies]
serde_json = { workspace = true }
