[package]
name = "atilla-cli"
description = "The atilla CLI — a thin shell over atilla-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atilla"
path = "src/main.rs"

[features]
# The shipped binary builds with `native-http` ON by default so `cargo build -p
# atilla-cli` / the release binary can reach a live provider out of the box: the
# feature threads through atilla-coding to atilla-ai, enabling the reqwest-backed
# transport that the builtin provider registry injects. `--no-default-features`
# drops back to the reqwest-free build, whose builtins stay `Unimplemented`.
default = ["native-http"]
native-http = ["atilla-coding/native-http"]

[dependencies]
atilla-core = { path = "../atilla-core" }
atilla-coding = { path = "../atilla-coding" }
atilla-tui = { path = "../atilla-tui" }
serde_json = { workspace = true }
