[package]
name = "atilla-coding"
description = "Rust mirror of @earendil-works/pi-coding-agent — the coding agent shell (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1"
semver = "1"
serde_yaml = "0.9"
serde_json = "1"
similar = "2"
unicode-normalization = "0.1"
ignore = "0.4"
globset = "0.4"
grep-regex = "0.1"
grep-matcher = "0.1"
