[package]
name = "atilla-coding"
description = "Rust mirror of @earendil-works/pi-coding-agent — the coding agent shell (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "3"
unicode-normalization = "0.1"
