[package]
name = "atilla-coding"
description = "Rust mirror of @earendil-works/pi-coding-agent — the coding agent shell (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Passthrough of atilla-ai's native reqwest HTTP transport. OFF by default so
# the lean workspace build stays reqwest-free; the CLI binary turns it on (its
# own default) to inject a live transport into the builtin provider registry.
native-http = ["atilla-ai/native-http"]

[dependencies]
anyhow = { workspace = true }
atilla-agent = { path = "../atilla-agent" }
atilla-ai = { path = "../atilla-ai" }
atilla-tui = { path = "../atilla-tui" }
base64 = "0.22"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "3"
tempfile = "3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "time",
    "io-util",
    "sync",
    "fs",
] }
unicode-normalization = "0.1"

# Process-group reaping (killpg/kill) is Unix-only; nix does not build on Windows.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
serde_json = "1"
