[package]
name = "atilla-core"
description = "The atilla engine — the library the CLI drives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
atilla-ai = { path = "../atilla-ai" }
atilla-agent = { path = "../atilla-agent" }
atilla-coding = { path = "../atilla-coding" }
