[package]
name = "atilla-extensions"
description = "Embedded deno_core JavaScript extension plane for atilla (off-thread !Send runtime host)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# V8 is heavy and its prebuilt static blob is downloaded from GitHub release
# assets on first build. That download 403s through the sandbox egress proxy, so
# building `deno_core` is impossible in-sandbox. Keep it OFF by default: the
# default build (and therefore `cargo build/test --workspace`) stays V8-free and
# locally buildable in every session. The real runtime is compiled and tested
# only under `--features deno`, which CI exercises in a dedicated job
# (.github/workflows/atilla-extensions.yml) where the blob download succeeds.
default = []
deno = [
    "dep:anyhow",
    "dep:deno_core",
    "dep:deno_ast",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:atilla-coding",
    "dep:atilla-agent",
    "dep:atilla-ai",
]

[dependencies]
anyhow = { workspace = true, optional = true }
# Pinned exact to match the throwaway/deno-hello spike. Optional + gated behind
# the `deno` feature so the workspace never pulls V8 by default.
deno_core = { version = "=0.408.0", optional = true }
# TypeScript -> JavaScript transpile (type-stripping), mirroring what jiti does
# at runtime for pi's `.ts` extensions. Same exact pin as the spike.
deno_ast = { version = "=0.53.3", features = ["transpiling"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
# The registration bindings lower JS registrations onto atilla-coding's
# Registry / ToolDefinition / Command / Hook types. This does NOT create a
# cycle: atilla-coding never depends on atilla-extensions. Gated behind `deno`
# alongside the rest of the runtime, since only the gated code uses it — the
# default (no-feature) crate stays empty and V8-free.
atilla-coding = { path = "../atilla-coding", optional = true }
# The `ExtensionRunner` seam's `RegisteredTool { tool: ToolDefinition, .. }`
# carries a `ToolDefinition` whose `execute` returns an `atilla_agent`
# `AgentToolResult`; the runner impl synthesizes those when lowering the
# Inventory's tool records. Gated behind `deno` alongside the rest of the impl.
atilla-agent = { path = "../atilla-agent", optional = true }
# The concrete `ExtensionOAuthLogin` seam impl (oauth_login_impl.rs) implements
# atilla-ai's trait and maps to its `OAuthCredential` / `AuthFlowError`. NO cycle:
# atilla-ai depends only downward (atilla-model-catalog), never on atilla-coding
# or atilla-extensions. Optional + gated behind `deno` alongside the rest of the
# impl, so the default (no-feature) crate stays empty and V8-free.
atilla-ai = { path = "../atilla-ai", optional = true }

[dev-dependencies]
# The `deno`-gated integration tests (tests/deno_extensions.rs) drive the async
# JsPlaneHandle API and so need a tokio test runtime. Non-optional so `cargo
# test` resolves it; it pulls no V8 and the test file itself is cfg'd out when
# the `deno` feature is off, so the default test build stays V8-free.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# The `deno`-gated runner-impl tests mock the seam's `SessionContextHost`, whose
# `get_signal` returns an `atilla_ai::seams::AbortSignal`. A plain (non-optional)
# dev dep so the test can name it; it is V8-free, and the test file is cfg'd out
# without the `deno` feature, so the default test build stays V8-free.
atilla-ai = { path = "../atilla-ai" }
# The `deno`-gated resource-loader acceptance tests (tests/deno_resource_loader.rs)
# build real on-disk extension trees in a temp dir. Cfg'd out without the feature,
# so the default test build never pulls it.
tempfile = "3"
