[package]
name = "atilla-napi"
description = "Node-API (napi-rs) cdylib bridging the atilla engine into JavaScript."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
atilla-agent = { path = "../atilla-agent" }
atilla-ai = { path = "../atilla-ai" }
atilla-coding = { path = "../atilla-coding" }
atilla-tui = { path = "../atilla-tui" }
indexmap = { version = "2", features = ["serde"] }
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
