[package]
name = "atilla-orchestrator"
description = "Rust mirror of @earendil-works/pi-orchestrator — the multi-instance orchestrator (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atilla-agent = { path = "../atilla-agent" }
atilla-ai = { path = "../atilla-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "process",
    "io-util",
    "sync",
    "net",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["hostname"] }

[dev-dependencies]
tempfile = "3"
