[package]
name = "atilla-tui"
description = "Bit-exact Rust port of pi's TUI width and key-parsing modules."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-segmentation = "1.12"
# crossterm is used strictly as the ANSI output sink / event backend for the
# real terminal (CrosstermTerminal); all diff/layout logic is our own port.
crossterm = "0.29"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
