[package]
name = "pidgin-agent"
description = "Rust mirror of @earendil-works/pi-agent-core — the agent loop and harness."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pidgin-ai = { path = "../pidgin-ai" }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

[dev-dependencies]
proptest = "1"
serde_json = { version = "1", features = ["preserve_order"] }
