[package]
name = "pidgin-ai"
description = "Rust mirror of @earendil-works/pi-ai — provider and model surface (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# The native reqwest-backed HttpTransport pulls reqwest + rustls, a heavier dep
# tree the default build (and `cargo build/test --workspace`) never needs. Keep
# it OFF by default so the lean default target stays reqwest-free, mirroring the
# way pidgin-extensions gates deno_core/V8 behind its non-default `deno` feature.
# The gated transport is compiled and tested only under `--features native-http`.
native-http = ["dep:reqwest"]

[dependencies]
base64 = "0.22"
getrandom = "0.4.3"
# AWS SigV4 request signing for the amazon-bedrock non-bearer credentials path
# (api/bedrock/sigv4.rs): HMAC-SHA256 signing-key derivation over the sha2
# digest already vendored below. digest-0.11-compatible.
hmac = "0.13.0"
# Context-overflow detection (utils/overflow.rs) compiles pi's provider error
# patterns as case-insensitive regexes.
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11.0"
# WHATWG-compatible URL parsing/normalization for utils/node_http_proxy.rs, so
# target parsing and the proxy URL's string form match pi's `URL` byte-for-byte.
url = "2"
# Native HTTP transport (seams/http_reqwest.rs). Optional + gated behind the
# non-default `native-http` feature so the workspace never pulls reqwest/rustls
# by default. rustls-only (NO native-tls/openssl) to avoid a system TLS build
# dependency; blocking client matches the synchronous HttpTransport seam.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "charset",
    "http2",
], optional = true }
pidgin-model-catalog = { path = "../pidgin-model-catalog" }

[dev-dependencies]
serde_json = { workspace = true }
