[package]
name = "pidgin-coding"
description = "Rust mirror of @earendil-works/pi-coding-agent — the coding agent shell (scaffold)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Passthrough of pidgin-ai's native reqwest HTTP transport. OFF by default so
# the lean workspace build stays reqwest-free; the CLI binary turns it on (its
# own default) to inject a live transport into the builtin provider registry.
native-http = ["pidgin-ai/native-http"]

# Marks the deno/V8 plane build. OFF by default so the lean workspace build
# never pulls V8. Gates the real highlight.js grammar engine in
# `utils::syntax_highlight` (`highlight` / `supports_language`); the default
# build ships a pi-faithful raw fallback in its place. No extra dependencies:
# pidgin-coding never depends on pidgin-extensions (would cycle), so this is a
# bare cfg flag that flips the seam bodies.
deno = []

[dependencies]
anyhow = { workspace = true }
pidgin-agent = { path = "../pidgin-agent" }
pidgin-ai = { path = "../pidgin-ai" }
pidgin-tui = { path = "../pidgin-tui" }
base64 = "0.22"
globset = "0.4"
# Photon (pi's WASM image lib) has no native-Rust equivalent that is not itself
# WASM/Node-coupled; the `image` crate is the standard pure-Rust decode/resize/
# encode library and provides the decode + Lanczos3 downscale + PNG/JPEG encode
# + EXIF-orientation pixel transform that pi actually uses. Minimal features
# (PNG + JPEG codecs only); default features (extra codecs, rayon) are disabled.
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg"] }
grep-matcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "3"
tempfile = "3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "time",
    "io-util",
    "sync",
    "fs",
] }
unicode-normalization = "0.1"

# Process-group reaping (killpg/kill) is Unix-only; nix does not build on Windows.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
serde_json = "1"
